# util_convertRAW

./: .gitignore  ConvertRawFiles.ps1  LICENCE.txt  README.md  README.txt  pyproject.toml  run.bat
help/: MSMSPrecursorCorrection.md
scripts/: fixMSMSPrecursor.py
src/convertraw/: filterMZML.py  fixMSMSPrecursor.py  main.py  prefixTimestamp.py  tui.py
