[project]
name = "util-convertraw"
version = "3.0.0"
description = "Convert Thermo raw files and correct incorrect MSMS precursor information."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "toml>=0.10.2",
    "textual>=0.70.0",
]

[project.scripts]
convertraw = "convertraw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convertraw"]

[tool.ruff]
line-length = 180
